--- a/docs/pt-PT/glossário/corpo.tex
+++ b/docs/pt-PT/glossário/corpo.tex
@@ -5,11 +5,11 @@ Esta secção apresentará termos com significado no domínio do problema, segui
 
 \textit{Donativo} - Contribuição ou valor em dinheiro de uma entidade ou pessoa. No caso deste sistema, uma contribuição em géneros alimentares feita por uma grande superfície.\\
 
-\textit{Sinalização de disponibilidade de donativo} - Relação elaborada por uma grande superfície de quais os géneros alimentares que pretende doar, em virtude de não serem passíveis de venda.\\
+\textit{Sinalização de disponibilidade de donativo} - Relação elaborada por uma grande superfície de quais os géneros alimentares que pretende doar, por gratuidade ou em virtude de não serem passíveis de venda.\\
 
 \textit{Proposta de donativo} - Documento apresentado por uma associação, autarquia ou outra organização do sector social à organização que realiza donativo. Inclui relação dos bens alimentares que propõe serem doados, bem como o agendamento da recolha de donativo.\\
 
-\textit{Recolha de donativo} - Acção realizada por parte de um representante do intermediário, geralmente uma organização do sector social (associação, autarquia, etc.) em que este levanta o donativo em local conhecido de quem o efectua.\\
+\textit{Recolha de donativo} - Acção realizada por parte de um representante do intermediário, geralmente uma organização do sector social (associação, autarquia, etc.) em que este levanta o donativo em local conhecido de quem o efectua, i.e, armazéns de uma grande superfície.\\
 
 \textit{Doação} - Acção de dar um bem próprio a um indivíduo carenciado. No caso deste sistema, a doação é efectuada em conjunto por uma grande superfície e por uma organização do sector social, que actua como intermediário.\\
 
